force-app/main/default/objects/M1_CDE_Settings__c/M1_CDE_Settings__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Controlling parameters for the batch job chain which generates Inbound Storage to BoB Coverage join records</description>
    <label>M1 CDE Settings</label>
</CustomObject>