force-app/main/default/objects/M1_CDE_Settings__c/fields/Chatter_Group_Name__c.field-meta.xml
<CustomField>
    <fullName>Chatter_Group_Name__c</fullName>
    <description>The Chatter Group on which we will post the batch job completion message.</description>
    <label>Chatter Group Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>