force-app/main/default/objects/M1_CDE_Settings__c/fields/Focus_Year__c.field-meta.xml
<CustomField>
    <fullName>Focus_Year__c</fullName>
    <defaultValue>&quot;2013&quot;</defaultValue>
    <description>InboundStorageToBoBCoverage_Associate will process billing records for this year and the prior year</description>
    <inlineHelpText>InboundStorageToBoBCoverage_Associate will process billing records for this year and the prior year</inlineHelpText>
    <label>Effective Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>