force-app/main/default/objects/M1_CDE_Settings__c/fields/Log_Debug_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Log_Debug_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Enable Log Debug Level</label>
    <type>Checkbox</type>
</CustomField>