force-app/main/default/objects/M1_CDE_Settings__c/fields/Query_Associate_Select__c.field-meta.xml
<CustomField>
    <fullName>Query_Associate_Select__c</fullName>
    <defaultValue>&quot;Id, Amount__c, Bill_Code__c, Billing_Market__r.Parent_Billing_Market__c, Country_Coverage__c, CurrencyIsoCode, Customer_Account__r.Id, Exclude_Bill_Code_from_BoB__c, IMGA_Name_Text__c, Invoice_Date__c, Name, Parent_Billing_Market__c&quot;</defaultValue>
    <description>List of the fields to be fetched via the SOQL query used by InboundStorageToBoBCoverage_Associate to select which billing records to process</description>
    <inlineHelpText>List of the fields to be fetched via the SOQL query used by InboundStorageToBoBCoverage_Associate</inlineHelpText>
    <label>Query Associate Select</label>
    <type>TextArea</type>
</CustomField>