force-app/main/default/objects/M1_CDE_Settings__c/fields/Query_Associate_Where__c.field-meta.xml
<CustomField>
    <fullName>Query_Associate_Where__c</fullName>
    <defaultValue>&quot;&quot;</defaultValue>
    <description>In the SOQL query used by InboundStorageToBoBCoverage_Associate to select which billing records to process, this is the first of 3 text settings which are concatenated to form the WHERE clause</description>
    <inlineHelpText>In the SOQL query used by InboundStorageToBoBCoverage_Associate to select which billing records to process, this is the first of 3 text settings which are concatenated to form the WHERE clause</inlineHelpText>
    <label>Query Associate Where</label>
    <type>TextArea</type>
</CustomField>